k8s/readme2.yaml
apiVersion: "v1"
kind: Service
metadata:
  name: "readme2"
spec:
  type: NodePort
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
      nodePort: 30001

      
  selector:
    app: "readme2"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: "readme2"
  labels:
    app: "readme2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "readme2"
  template:
    metadata:
      labels:
        app: "readme2"
    spec:
      containers:
        - name: "readme2"
          image: "vitorta/readme2"
          ports:
          - containerPort: 8001
