k8s/readme3.yaml
apiVersion: "v1"
kind: Service
metadata:
  name: "readme3"
spec:
  type: NodePort
  ports:
    - port: 8002
      targetPort: 8002
      nodePort: 30002
      
  selector:
    app: "readme3"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: "readme3"
  labels:
    app: "readme3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "readme3"
  template:
    metadata:
      labels:
        app: "readme3"
    spec:
      containers:
        - name: "readme3"
          image: "vitorta/readme3"
          ports:
          - containerPort: 8002
